--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 				</div>
 			</div>
 			<!--LINE 2 -->
-							<div class="col-6">
-					<img class="img-responsive" src="img/landscape-nature-clouds-cloudy.jpg" alt="s" title="s">
+				<div class="col-6">
+					<img class="img-responsive" src="img/woda.jpg" alt="s" title="s">
 				</div>
 				<div class="col-6">
-					<img class="img-responsive" src="img/lion-wild-africa-african.jpg" alt="s" title="s">
+					<img class="img-responsive" src="img/kwiatek.jpg" alt="s" title="s">
 				</div>
 			<!--LINE 3 -->
 			<div class="row">
